# frontier-pulse

./: .gitignore  BLOG_WORKFLOW.md  DECISIONS.md  PLANNING_QUESTIONS.md  PROJECT_TRACKER.md  README.md  docker-compose.app.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: briefs.py  clusters.py  diagnostics.py  exports.py  health.py  hypotheses.py  memory.py  papers.py  qa.py  workflows.py
backend/app/db/: models.py  session.py
backend/app/schemas/: domain.py
backend/app/services/: contracts.py  inference.py  pipeline.py  scheduler.py  sources.py  stub_impl.py  text_utils.py
backend/artifacts/evals/: hypothesis_eval_fixture.json  results_latest.json  results_latest.md
backend/artifacts/plans/: invalid_experiment_plan_failure_analysis.json  invalid_experiment_plan_failure_analysis.md  invalid_hypotheses.json  sample_experiment_plan.json  sample_experiment_plan.md  sample_hypotheses.json
backend/scripts/: generate_experiment_plan.py  score_experiment_plan_eval.py
backend/tests/: test_pipeline_core.py  test_text_utils.py
benchmarks/seed/: README.md
content/comms/: 2026-03-01-linkedin-product.md  2026-03-01-linkedin-research.md  2026-03-01-x-product.txt  (+1 more)
docs/: LLM_INFERENCE_RESEARCH.md  QA_CHECKLIST.md  V1_SCOPE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
scripts/: backup_db.sh
(+11 files in other folders)
